syntax = "proto3";
package zrchain.policy;

import "google/protobuf/any.proto";

option go_package = "github.com/Zenrock-Foundation/zrchain/v6/x/policy/types";

// Policy defines a policy that can be used to validate a transaction
message Policy {
  string creator = 1;
  uint64 id = 2;
  string name = 3;
  google.protobuf.Any policy = 4;
  uint64 btl = 5;
}

// BoolparserPolicy defines a policy that can be used to validate a transaction
message BoolparserPolicy {
  // Definition of the policy, eg.
  // "t1 + t2 + t3 > 1"
  string definition = 1;
  repeated PolicyParticipant participants = 2;
}

// PolicyParticipant defines a participant in a policy
message PolicyParticipant {
  string abbreviation = 1 [ deprecated = true ];
  string address = 2;
}
